# python-lft-mcp

./: .gitignore  CHANGELOG.md  README.md  main.py  pyproject.toml  requirements.txt  tox.ini
.github/: dependabot.yml
.github/workflows/: dependabot-auto-merge.yml  lint.yml  publish.yml  test.yml
examples/: README.md  mcp-config.json
python_lft/: __init__.py  __main__.py  app.py  cli.py  config_generator.py  tools_api.py
python_lft/config/: __init__.py  constants.py
python_lft/core/: __init__.py  config.py  formatters.py  interfaces.py  models.py
python_lft/executors/: __init__.py  factories.py  formatters.py  linters.py  testers.py
python_lft/services/: __init__.py  orchestrator.py  runners.py  workspace.py
tests/: __init__.py  test_app.py  test_basic.py  test_cli.py  test_comprehensive.py  test_config_generator.py  test_core_functionality.py  test_core_models.py  test_imports.py  test_services_orchestrator.py  test_services_runners.py  test_services_workspace.py  test_tools_api.py  test_workspace.py
